--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -133,12 +133,14 @@
     <h4>Operator Functions</h4>
 </div>
 <div class="btn-group btn-block" role="group" style="margin-bottom:4px;white-space: normal;">
-    <a href="{{ path('logout') }}" class="btn btn-default col-sm-10 col-xs-10 col-md-10" role="button">
-        {# <button type="button" class="btn btn-default col-sm-10" role="button"> #}
+    {% if is_granted('ROLE_USER') %}
+        <a href="{{ path('logout') }}" class="btn btn-default col-sm-10 col-xs-10 col-md-10" role="button">
+    {% else %}
+        <a href="{{ path('logout') }}" class="btn btn-default col-sm-12 col-xs-12 col-md-12" role="button"> 
+    {% endif %}
             <div class="row">
                 Logout
             </div>
-        {# </button> #}
     </a>
     {% if is_granted('ROLE_USER') %}
         <button type="button" class="btn btn-default dropdown-toggle col-sm-2 col-xs-2 col-md-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
