Updating people counting view

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -84,31 +84,31 @@
 }
 
 @-webkit-keyframes argh-my-eyes {
-    0%   { background-color: #d9534f; }
-    49% { background-color: #d9534f; }
+    0%   { background-color: #f29896; }
+    49% { background-color: #f29896; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #d9534f; }
+    100% { background-color: #f29896; }
 }
 @-moz-keyframes argh-my-eyes {
-    0%   { background-color: #d9534f; }
-    49% { background-color: #d9534f; }
+    0%   { background-color: #f29896; }
+    49% { background-color: #f29896; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #d9534f; }
+    100% { background-color: #f29896; }
 }
 @keyframes argh-my-eyes {
-    0%   { background-color: #d9534f; }
-    49% { background-color: #d9534f; }
+    0%   { background-color: #f29896; }
+    49% { background-color: #f29896; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #d9534f; }
+    100% { background-color: #f29896; }
 }
 
 .flash {
-    -webkit-animation: argh-my-eyes 1s infinite;
-    -moz-animation:    argh-my-eyes 1s infinite;
-    animation:         argh-my-eyes 1s infinite;
+    -webkit-animation: argh-my-eyes 3s infinite;
+    -moz-animation:    argh-my-eyes 3s infinite;
+    animation:         argh-my-eyes 3s infinite;
 }
 
 @-webkit-keyframes row_flash {
