--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -226,7 +226,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
     <script type="text/javascript" src="{{ asset('assets/vendor/easy-autocomplete/jquery.easy-autocomplete.min.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0L5FuS1PZXDw90PINaMckDeQyIj_em1M"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ gmapsKey }}"></script>
     <script type="text/javascript"src="{{ asset('assets/vendor/jqueryui/jquery-ui.min.js') }}"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
