Modified weather window

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -315,7 +315,7 @@
         var f = document.getElementById('WeatherForm');
         f.email_address.value = name;
         f.password.value = password;
-        window.open('', 'TheWindow');
+        window.open('','Weather radar & forecast','width=800,height=600');
         f.submit();
         } 
     
