swbug sidebar weather

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -299,7 +299,7 @@
 <br>
 {% include 'copyright.html.twig' %}
 
-<form id="WeatherForm" method="post" action="http://premium.raintoday.co.uk/mobile" target="TheWindow">
+<form id="WeatherForm" method="post" action="http://premium.raintoday.co.uk/mobile" target="Weather radar & forecast">
 <input type="hidden" name="email_address" value="" />
 <input type="hidden" name="password" value="" />
 </form>
