--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -31,7 +31,7 @@
         <div class="row">
             <h1 class="col-xs-12 col-md-5 text-nowrap">
                 {% block headertop %}{% endblock %}
-                <small class="col-xs-12 col-md-5 text-nowrap">
+                <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
             </h1>
