--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -29,14 +29,14 @@
     <div class="loader"></div>
     <div class="page-header">
         <div class="row">
-            <h1 class="col-xs-12 col-md-5 text-nowrap">
+            <h1 class="col-xs-11 col-md-5 text-nowrap">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
             </h1>
 
-                <h4 class="col-md-2 text-center hidden-xs"><br>
+                <h4 class="col-md-2 text-center col-sm-1 hidden-xs"><br>
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
