--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -415,7 +415,7 @@
                 setInterval('updateClock()', 1000);
                 setInterval('AlertUpdate()', 5000);
                 setInterval('AlertCheck()', 500);
-                setInterval('updateWeatherWarning()', 30000);
+                //setInterval('updateWeatherWarning()', 30000);
                 $('#mainModal').on('hidden.bs.modal', function (e) {
                     alertCounter = 0;
                     if(alertData){
