modified user edit twig

--- a/app/Resources/views/userUpdate.html.twig
+++ b/app/Resources/views/userUpdate.html.twig
@@ -47,11 +47,11 @@ Control Room Update User Details
                         <div class="row">   
                             <div class="form-group">
                                 <div class="col-md-2">
-                                    {{ form_label(form.apiKey) }} 
-                                    {{ form_errors(form.apiKey) }}
+                                    {{ form_label(form.apiToken) }} 
+                                    {{ form_errors(form.apiToken) }}
                                 </div>
                                 <div class="col-md-4">                                     
-                                    {{ form_widget(form.apiKey) }}
+                                    {{ form_widget(form.apiToken) }}
                                 </div>
                             </div>
                         </div><br>
