Added get the app to the sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -246,6 +246,13 @@
                 </div>
             </a>
         </li>
+        <li>
+                <a href="https://drive.google.com/file/d/0Bwsfsw4a9GPSUWg5UDNTcVB2cFE/view?usp=sharing"  target="_blank" style="margin-bottom:4px;white-space: normal;" role="button">
+                <div class="row">
+                    Get the Event Control App
+                </div>
+            </a>
+        </li>
     </ul>
 </div>        
 
