--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -60,7 +60,7 @@ Control Room Login
                             {{ form_errors(form_username) }}
                         </div>
                         <div class="col-md-3">   
-                            {{ form_widget(form._username)) }}
+                            {{ form_widget(form._username) }}
                         </div>
                     </div>
                 </div><br>
