--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -57,7 +57,7 @@ Control Room Login
                     <div class="form-group">
                         <div class="col-md-1">  
                             {{ form_label(form._username) }} 
-                            {{ form_errors(form_username) }}
+                            {{ form_errors(form._username) }}
                         </div>
                         <div class="col-md-3">   
                             {{ form_widget(form._username) }}
