--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -174,9 +174,9 @@
                {# start of skew rows#}
                     <div class="row">
                         <br>
-                        <h4>Venue skew's</h4>
+                        <h4Count Alerts</h4>
                         <div class="col-md-6">
-                            {% if countAlerts empty %}
+                            {% if countAlerts is empty %}
                                 No Count Alerts
                             {% else %}
                                 <table class="table table-striped">
