--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -171,34 +171,34 @@
                             {{ form_end(form_skew) }}
                         </div>
                     </div>
-                </div>
                {# start of skew rows#}
-                <div class="row">
-                    <br>
-                    <h4Count Alerts</h4>
-                    <div class="col-md-6">
-                        {% if countAlerts is empty %}
-                            No Count Alerts
-                        {% else %}
-                            <table class="table table-striped">
-                                <tbody>
-                                    <tr>
-                                        <td><strong>Description</strong></td>
-                                        <td><strong>Direction/strong></td>
-                                        <td><strong>Count</strong></td>
-                                        <td><strong>Currently Triggered?</strong></td>
-                                    </tr>
-                                    {% for countAlert in countAlerts %}
+                    <div class="row">
+                        <br>
+                        <h4>Count Alerts</h4>
+                        <div class="col-md-6">
+                            {% if countAlerts is empty %}
+                                No Count Alerts
+                            {% else %}
+                                <table class="table table-striped">
+                                    <tbody>
                                         <tr>
-                                            <td>{{ countAlert.description }}</td>
-                                            <td>{{ countAlert.upDownBoth }}</td>
-                                            <td>{{ countAlert.count }}</td>
-                                            <td>{{ countAlert.triggered }}</td>
+                                            <td><strong>Description</strong></td>
+                                            <td><strong>Direction/strong></td>
+                                            <td><strong>Count</strong></td>
+                                            <td><strong>Currently Triggered?</strong></td>
                                         </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        {% endif %}
+                                        {% for countAlert in countAlerts %}
+                                            <tr>
+                                                <td>{{ countAlert.description }}</td>
+                                                <td>{{ countAlert.upDownBoth }}</td>
+                                                <td>{{ countAlert.count }}</td>
+                                                <td>{{ countAlert.triggered }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
