--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -114,7 +114,7 @@
                 {# start of skew rows#}
                 <div class="row">
                     <br>
-                    <h4>Venue skew's</h4>
+                    <h4>Venue Skews</h4>
                     <div class="col-md-6">
                         {% if skews is empty %}
                             No skews
@@ -172,6 +172,8 @@
                         </div>
                     </div>
                {# start of skew rows#}
+                    <br>
+                    <br>
                     <div class="row">
                         <br>
                         <h4>Count Alerts</h4>
