--- a/app/Resources/views/venue_detailed.html.twig
+++ b/app/Resources/views/venue_detailed.html.twig
@@ -186,7 +186,7 @@
                                     <tbody>
                                         <tr>
                                             <td><strong>Description</strong></td>
-                                            <td><strong>Direction/strong></td>
+                                            <td><strong>Direction</strong></td>
                                             <td><strong>Count</strong></td>
                                             <td><strong>Currently Triggered?</strong></td>
                                         </tr>
