--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -30,7 +30,7 @@ Control Room Log Edit
                                         {{ form_label(log_entry.log_entry_open_time) }}
                                         {{ form_errors(log_entry.log_entry_open_time) }}
                                         <div class='input-group date' id='datetimepicker1'>
-                                            {{ form_widget(log_entry.log_entry_open_time) }}
+                                            {{ form_widget(log_entry.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") ) }}
                                             <span class="input-group-addon">
                                                 <span class="glyphicon glyphicon-calendar"></span>
                                             </span>
