--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -103,7 +103,8 @@ Control Room Log New Entry
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true
+                showTodayButton: true,
+                locale: 'en-gb'
             });
         });
         $('#now_button').click(function(){
