--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -255,8 +255,7 @@ Control Room Log Edit
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true,
-                locale: 'en-gb'
+                showTodayButton: true
             });
         });
         
