--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -306,8 +306,7 @@ Event Entry Form
             $('#datetimepicker1').datetimepicker({
                 useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true,
-                locale: 'en-gb'
+                showTodayButton: true
             });
         });
         
@@ -315,8 +314,7 @@ Event Entry Form
             $('#datetimepicker2').datetimepicker({
                 useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true,
-                locale: 'en-gb'
+                showTodayButton: true
             });
         });
         
@@ -324,8 +322,7 @@ Event Entry Form
             $('#datetimepicker3').datetimepicker({
                 useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true,
-                locale: 'en-gb'
+                showTodayButton: true
             });
         });
         
