--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -37,9 +37,9 @@ Control Room Log
                                         {% endif %}    
                                             <td>
                                                 {% if log.log_update_timestamp is not null %}
-                                                    <div data-toggle="tooltip" data-placement="left" title="Updated: {{ log.log_update_timestamp|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    <div data-toggle="tooltip" data-placement="left" title="Updated: {{ log.log_update_timestamp|date('Y-m-d H:i:s') }}">
                                                 {% endif %}
-                                                {{ log.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }}
+                                                {{ log.log_entry_open_time|date('Y-m-d H:i:s') }}
                                                 {% if log.log_update_timestamp is not null %}
                                                     </div>
                                                 {% endif %}
@@ -52,7 +52,7 @@ Control Room Log
                                             {% if log.general_description is null %}
                                             {% else %}
                                                 {% if log.general_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.general_entry_closed_time|date('Y-m-d H:i:s') }}">
                                                 {% else %}
                                                     <span class="label label-primary">
                                                 {% endif %}
@@ -62,7 +62,7 @@ Control Room Log
                                             {% if log.medical_injury_description is null %}
                                             {% else %}
                                                 {% if log.medical_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.medical_entry_closed_time|date('Y-m-d H:i:s') }}">
                                                 {% else %}
                                                     <span class="label severity{{ log.medical_severity }}">
                                                 {% endif %}
@@ -72,7 +72,7 @@ Control Room Log
                                             {% if log.security_incident_description is null %}
                                             {% else %}
                                                 {% if log.security_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.security_entry_closed_time|date('Y-m-d H:i:s') }}">
                                                 {% else %}
                                                     <span class="label severity{{ log.severity }}">
                                                 {% endif %}
@@ -82,7 +82,7 @@ Control Room Log
                                             {% if log.lost_property_description is null %}
                                             {% else %}
                                                 {% if log.lost_property_entry_closed_time is not null %}
-                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    <span class="label label-default" data-toggle="tooltip" data-placement="left" title="Closed: {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s') }}">
                                                 {% else %}
                                                     <span class="label label-info">
                                                 {% endif %}
