--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -103,8 +103,7 @@ Control Room Log New Entry
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
                 format: 'YYYY-MM-DD HH:mm:ss',
-                showTodayButton: true,
-                locale: 'en-gb'
+                showTodayButton: true
             });
         });
         $('#now_button').click(function(){
