--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -254,7 +254,7 @@ Control Room Log Edit
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
-                format: 'YYYY-MM-DD HH:mm:ss',
+                format: 'YYYY-MM-DD HH:mm:ss z',
                 showTodayButton: true
             });
         });
