--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -254,7 +254,8 @@ Control Room Log Edit
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
-                format: 'YYYY-MM-DD HH:mm:ss z',
+                format: 'YYYY-MM-DD HH:mm:ss z'
+                locale: 'en-Gb'
                 showTodayButton: true
             });
         });
