--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -256,6 +256,7 @@ Control Room Log Edit
                 useCurrent: true,
                 format: 'YYYY-MM-DD HH:mm:ss z',
                 locale: 'en-gb',
+                timezone: 'GMT',
                 showTodayButton: true
             });
         });
