--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -255,6 +255,7 @@ Control Room Log Edit
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
                 format: 'YYYY-MM-DD HH:mm:ss z',
+                locale: 'en-gb',
                 showTodayButton: true
             });
         });
